# luzSagrada

./: README.md  catolic_api.db  conftest.py  pyproject.toml  test.db
app/: __init__.py  main.py
app/api/v1/endpoints/: prayers.py
app/core/: database.py
app/models/: __init__.py  prayer.py
app/schemas/: __init__.py  prayer.py
app/tests/: test_oracoes.py  test_prayers.py  test_prayers_endpoints.py
